Make sure pledges don't pop up by default on safari

--- a/style.mobile.css
+++ b/style.mobile.css
@@ -7,7 +7,7 @@ body {
     position: static;
 }
 
-.pledge-forms iframe {
+.pledge-forms [type=radio]:checked + iframe  {
     position: fixed;
     top: 0;
     left: 0;
